Cherry-pick 310827@main (45f6219e113d). https://bugs.webkit.org/show_bug.cgi?id=311544

[WPE][GTK] preventDefault() on pointerdown does not suppress gesture-based compatibility mouse events from touch.
    https://bugs.webkit.org/show_bug.cgi?id=311544

    Reviewed by Carlos Garcia Campos.

    After dispatching pointer events via dispatchEventForTouchAtIndex() in
    EventHandler::handleTouchEvent(), check preventsCompatibilityMouseEventsForIdentifier()
    for the touch pointer ID. If it returns true (meaning pointerdown was cancelled),
    set swallowedEvent=true so that wasEventHandled=true propagates to the UIProcess,
    preventing gesture-based mouse synthesis.

    * Source/WebCore/page/EventHandler.cpp:
    (WebCore::EventHandler::handleTouchEvent):

    Canonical link: https://commits.webkit.org/310827@main

Canonical link: https://commits.webkit.org/305877.407@webkitglib/2.52